# GL-graphics

./: .gitignore  CMakeLists.txt  JOURNAL.md  README.md
assets/: 02_conversion.drawio
include/glad/: glad.h
src/: glad.c  main.cpp  shaders.cpp  triangles.cpp
src/01_triangle/triangles/: main.cpp
src/02_shaders/custom/: main.cpp  shader.frag  shader.hpp  shader.vert
src/02_shaders/question/: main.cpp
src/02_shaders/rainbow/: main.cpp
